--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "minos",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "gulp": "~3.5.1",
+    "gulp-util": "~2.2.14",
+    "gulp-uglify": "~0.2.0",
+    "gulp-rename": "~0.2.2",
+    "gulp-jshint": "~1.3.4",
+    "jshint-stylish": "~0.1.5",
+    "gulp-header": "~1.0.2"
   }
 }
